[package]
name = "mdsplode"
description = "A CLI tool for exploding and serialising Markdown files (metadata, AST, rendered parts, and rendered whole)"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/mdsplode"
documentation = "https://docs.rs/mdsplode/"
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
jq-rs = "0.4.1"
libc = "0.2.151"
markdown = { version = "1.0.0-alpha.16", features = ["serde"] }
serde = "1.0.193"
serde_json = { version = "1.0.108", features = ["raw_value"] }
toml = "0.8.8"
twyg = { version = "0.2", optional = true }
versions = "6.0.0"

[[bin]]
name = "mdsplode"

[features]
logging = ["twyg"]
