[package]
name = "mdsplode"
description = "A CLI tool for exploding and serialising Markdown files (metadata, AST, rendered parts, and rendered whole)"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/mdsplode"
documentation = "https://docs.rs/mdsplode/"
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5"
jq-rs = "0.4.1"
libc = "0.2.151"
log = "0.4"
markdown = { version = "1.0.0-alpha.16", features = ["serde"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
rustyline = { version = "13.0.0", features = ["with-file-history"] }
serde = "1.0.193"
serde_json = { version = "1.0.108", features = ["raw_value"] }
shlex = "1.2.0"
toml = "0.8.8"
twyg = { version = "0.4" }
versions = "6.0.0"
walkdir = "2.4"

[[bin]]
name = "mdsplode"
